# solar-agents

./: README.md  requirements.txt  solar-hub.py  start-hub.bat  start-pv-multi-agent.bat
pv-multi-agent/: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  gui.py  pyproject.toml
pv-multi-agent/.github/workflows/: test.yml
pv-multi-agent/data/: pv_module_database.py
pv-multi-agent/data/weather_cache/: -6.9147_107.6098_2023.parquet
pv-multi-agent/docs/: CITATION.md  DEPLOYMENT.md  VALIDATION_REPORT.md  laporan_penelitian.md
pv-multi-agent/reports/: pv_report_phoenix_10kw_residential.txt  pv_report_politeknik_energi_dan_pertambangan_bandung.txt
pv-multi-agent/scripts/: check_ollama.py
pv-multi-agent/src/: load_profiles.py  module_fetcher.py  pdf_generator.py  pln_tariffs.py  pv_agents.py  pv_agents_cloud.py  simulation.py  storage_engine.py  storage_optimizer.py  weather_provider.py
pv-multi-agent/tests/: test_core.py  test_validation.py  test_weather_provider.py
pv-multi-agent/tests/data/: validation_references.json
