[project]
name = "pv-multi-agent"
version = "1.1.0"
description = "Sunnyside AI: Multi-Agent PV Solar Simulation Platform with GUI, Battery Storage, and PDF Reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pvlib>=0.15.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=1.0.0",
    "streamlit>=1.30.0",
    "openmeteo-requests>=1.7.5",
    "niquests>=3.0.0",
    "requests>=2.31.0",
    "plotly>=5.0.0",
    "fpdf2>=2.8.7",
    "pillow>=12.2.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
pv-agents = "src.pv_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
